--- a/assets/css/new-style.css
+++ b/assets/css/new-style.css
@@ -683,8 +683,23 @@ body::-webkit-scrollbar {
   position: absolute;
   bottom: 110px;
   border-left: 2px solid #6b05a8;
-  left: -100%;
-  display: none;
+  left: -200%;
+  bottom: 0%;
+  transition: 1s;
+}
+
+.legend .dot {
+  flex: 0 0 16px;
+  margin: 5px 15px 0 0;
+}
+
+.level .legend.show-on-level {
+  max-width: 292px;
+  display: flex;
+}
+
+.legend .description {
+  max-width: 180px;
 }
 
 .pulse-dot {
