--- a/assets/css/new-style.css
+++ b/assets/css/new-style.css
@@ -843,7 +843,7 @@ body::-webkit-scrollbar {
   left: 0;
   z-index: 2;
   width: 100%;
-  height: 100%;
+  height: 100% !important;
   max-width: unset;
 }
 
@@ -933,7 +933,7 @@ body::-webkit-scrollbar {
   right: -200%;
   height: 100%;
   box-shadow: -18px 4px 16px 0 rgba(0, 0, 0, 0.1);
-  transition: right 2s ease-in-out
+  transition: right 1s ease-in-out
 }
 
 .sidebar-wrapper .sidebar .purple-gradient-section {
@@ -1052,7 +1052,7 @@ body::-webkit-scrollbar {
 
 .level .col-wrapper .col .video-wrapper {
   position: relative;
-  transition: all 2s ease-in-out;
+  transition: all 1s ease;
   margin-left: 0px;
   overflow: visible;
 }
