--- a/assets/css/new-style.css
+++ b/assets/css/new-style.css
@@ -158,12 +158,16 @@
 }
 
 html {
-  height: 100%
+  height: 100%;
+  overflow-x: hidden
 }
 
 @media only screen and (max-width: 1024px) {
   html {
     overflow-x: hidden
+  }
+  body {
+    overflow-x: hidden;
   }
 }
 
@@ -171,7 +175,6 @@ body {
   min-height: 100%;
   width: 100%;
   max-width: 100vw;
-  overflow-x: hidden;
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
   font-size: 14px;
@@ -263,7 +266,8 @@ body::-webkit-scrollbar {
 }
 
 .col-wrapper .col {
-  width: 100%
+  width: 100%;
+  margin-bottom: 100px;
 }
 
 @media only screen and (min-width: 481px) {
@@ -474,10 +478,10 @@ body::-webkit-scrollbar {
 
 .pull-up.scenes-wrapper .button {
   margin: auto;
-  margin-bottom: 100px;
-  position: relative;
+  position: absolute;
   left: 50%;
   transform: translate(-50%, -60px);
+  bottom: -10%;
 }
 
 .scenes-wrapper .col .box-wrapper .video-wrapper {
@@ -662,8 +666,6 @@ body::-webkit-scrollbar {
 .industry.level-enterprise .chemicals .col-left .video {
   -webkit-animation-duration: 1s;
   animation-duration: 1s;
-  -webkit-animation-delay: 0.8s;
-  animation-delay: 0.8s;
   animation-fill-mode: forwards;
   animation-timing-function: ease;
   -webkit-animation-name: make-bigger2;
@@ -686,10 +688,9 @@ body::-webkit-scrollbar {
   display: flex;
   flex-direction: row;
   position: absolute;
-  bottom: 110px;
   border-left: 2px solid #6b05a8;
   left: -200%;
-  bottom: 0%;
+  bottom: 10%;
   transition: 1s;
 }
 
@@ -1071,4 +1072,68 @@ body::-webkit-scrollbar {
 
 .scenes-wrapper .col .video {
   max-width: 100%;
+}
+
+@media screen and (max-width: 800px){
+  @keyframes make-bigger {
+    0% {
+      transform: translate(-5px, 50px) scale(1.25);
+    }
+    100% {
+      transform: translate(-5px, 250px) scale(2.5);
+    }
+  }
+
+  @keyframes make-bigger2 {
+    0% {
+      transform: translate(-5px, 50px) scale(1.6);
+    }
+    100% {
+      transform: translate(-5px, 300px) scale(3.6);
+    }
+  }
+  
+  .video-wrapper {
+    transform: scale(1);
+  }
+  
+  .scenes-wrapper .col .box-wrapper {
+    flex-direction: column;
+  }
+  
+  .level .scenes-wrapper .title-wrapper.show-on-level div {
+    top: 0px !important;
+    min-width: 200%;
+    left: -50% !important;
+  }
+
+  .level.level-plant .scenes-wrapper .col.col-right .box-wrapper {
+    position: relative;
+    transition: 1s all;
+    transform: translate(-50%, 0px);
+  }
+
+  .level.level-enterprise .scenes-wrapper .col.col-left .box-wrapper {
+    position: relative;
+    transition: 1s all;
+    transform: translate(50%, 0px);
+  }
+
+  .level .scenes-wrapper .title-wrapper.show-on-level div {
+    position: relative;
+  }
+
+  .legend {
+    top: 25%;
+    bottom: unset;
+  }
+
+  .level .scenes-wrapper .col {
+    margin-bottom: 500px;
+  }
+
+  .level .col-wrapper .col .video-wrapper .video-overlay {
+    margin-top: 190px;
+  }
+
 }
