--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,7 +146,6 @@ html {
   }
 }
 body {
-  min-height: 100%;
   width: 100%;
   max-width: 100vw;
   overflow-x: hidden;
@@ -340,203 +339,7 @@ body::-webkit-scrollbar {
 .nav .nav-item .nav-link.active {
   color: #78a1fc
 }
-.splash {
-  height: 100%
-}
-.splash .container {
-  height: 100%
-}
-@media only screen and (min-width: 481px) and (max-width: 1024px) {
-  .splash .container {
-    padding-bottom: 75px;
-    height: auto
-  }
-}
-.splash h1 {
-  font-family: Barlow-Bold;
-  font-size: 80px;
-  color: #6b05a8
-}
-@media only screen and (min-width: 1025px) {
-  .splash h1 {
-    margin-bottom: 60px
-  }
-}
-@media only screen and (min-width: 481px) and (max-width: 1024px) {
-  .splash h1 {
-    font-size: 51px
-  }
-}
-@media only screen and (max-width: 480px) {
-  .splash h1 {
-    font-size: 44px;
-    margin-bottom: 10px
-  }
-}
-.splash.purple {
-  background-image: linear-gradient(to left, transparent 0, transparent 33%, #6b05a8 33%, #6b05a8 66%, transparent 66%, transparent 100%);
-  background-size: 6000px 6000px;
-  -webkit-animation: swipe-splash 2s ease-in-out forwards;
-  animation: swipe-splash 2s ease-in-out forwards;
-  -webkit-animation-delay: .1s;
-  animation-delay: .1s
-}
-@media only screen and (min-width: 481px) and (max-width: 1024px) {
-  .splash.purple {
-    background-size: 3000px 3000px
-  }
-}
-@media only screen and (max-width: 480px) {
-  .splash.purple {
-    background-size: 3000px 3000px
-  }
-}
-.splash.purple .container {
-  padding-bottom: 0
-}
-@media only screen and (min-width: 481px) and (max-width: 1024px) {
-  .splash.purple .container-position {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%)
-  }
-}
-@media only screen and (max-width: 480px) {
-  .splash.purple .container-position {
-    padding-top: 154px
-  }
-}
-@media only screen and (min-width: 481px) and (max-width: 1024px) {
-  .splash.purple .col-left {
-    flex-basis: 100%
-  }
-}
-.splash.purple .text-wrapper {
-  max-width: 571px
-}
-@media only screen and (min-width: 481px) and (max-width: 1024px) {
-  .splash.purple .text-wrapper {
-    margin-left: 25px
-  }
-}
-.splash.purple h1 {
-  position: relative
-}
-.splash.purple h1::after {
-  content: "Welcome to the Digital Factory Experience";
-  display: block;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-image: linear-gradient(to left, #6b05a8 0, #6b05a8 33%, #f2f5f7 33%, #f2f5f7 66%, #6b05a8 66%, #6b05a8 100%);
-  background-size: 6000px 6000px;
-  mix-blend-mode: lighten;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 5;
-  font-family: Barlow-Bold;
-  font-size: 80px;
-  color: #6b05a8;
-  -webkit-animation: swipe-splash 2.0s ease-in-out;
-  animation: swipe-splash 2.0s ease-in-out
-}
-@media only screen and (min-width: 1025px) {
-  .splash.purple h1::after {
-    margin-bottom: 60px
-  }
-}
-@media only screen and (min-width: 481px) and (max-width: 1024px) {
-  .splash.purple h1::after {
-    font-size: 51px
-  }
-}
-@media only screen and (max-width: 480px) {
-  .splash.purple h1::after {
-    font-size: 44px;
-    margin-bottom: 10px
-  }
-}
-@media only screen and (min-width: 481px) and (max-width: 1024px) {
-  .splash.purple h1::after {
-    background-size: 3000px 3000px;
-    font-size: 80px;
-    -webkit-animation: swipe-splash 2.0s ease-in-out;
-    animation: swipe-splash 2.0s ease-in-out
-  }
-}
-@media only screen and (max-width: 480px) {
-  .splash.purple h1::after {
-    background-size: 3000px 3000px;
-    -webkit-animation: swipe-splash 2.0s ease-in-out;
-    animation: swipe-splash 2.0s ease-in-out
-  }
-}
-@media only screen and (min-width: 481px) and (max-width: 1024px) {
-  .splash.purple h1 {
-    font-size: 80px
-  }
-}
-.splash.purple .purple-hidden {
-  display: none
-}
-.splash.purple .purple-invisible {
-  opacity: 0
-}
-@media only screen and (max-width: 1024px) {
-  .splash .col-left {
-    order: 2
-  }
-}
-.splash .col-right {
-  padding-top: 25px;
-  transition: opacity 1s ease-in-out
-}
-@media only screen and (max-width: 1024px) {
-  .splash .col-right {
-    order: 3
-  }
-}
-@media only screen and (min-width: 481px) and (max-width: 1024px) {
-  .splash .col-right {
-    padding-top: 15px
-  }
-}
-.splash .col-right p {
-  font-family: Muli-Regular;
-  font-size: 14px;
-  line-height: 20px;
-  letter-spacing: 0px
-}
-.splash .col-right p:first-of-type {
-  margin-bottom: 20px
-}
-.splash .col-right p strong {
-  font-weight: bold
-}
-@media only screen and (max-width: 1024px) {
-  .splash .col-full {
-    order: 1
-  }
-}
-@-webkit-keyframes swipe-splash {
-  0% {
-    background-position: left
-  }
-  100% {
-    background-position: right
-  }
-}
-@keyframes swipe-splash {
-  0% {
-    background-position: left
-  }
-  50% {
-    background-position: center
-  }
-  100% {
-    background-position: left
-  }
-}
+
 .slider {
   min-height: 100vh;
   height: 100%
@@ -2148,4 +1951,96 @@ body::-webkit-scrollbar {
 }
 .sidebar-to-front {
   z-index: 6
+}
+
+section {
+  width: 100%;
+  height: 100%;
+  background: #6b05a8;
+  overflow: hidden;
+  position: absolute;
+  color: white;
+  left: 0px;
+  top: 0px;
+}
+
+h1 {
+  font-size: 80px;
+  position: relative;
+  left: 20%;
+  margin-top: 20%;
+}
+
+.wrapper {
+  height: 100%;
+  width: 100%;
+  background: #f2f5f7;
+  color: #6b05a8;
+  overflow: hidden;
+  position: absolute;
+  animation: slide 3s linear;
+}
+
+.sliding {
+  position: absolute;
+  font-size: 12em;
+  width: 550px;
+}
+
+@keyframes slide {
+  0% {
+    width: 100%;
+  }
+  50% {
+    width: 0%;
+  }
+  100% {
+    width: 100%;
+  }
+}
+
+.col-wrapper .col>div {
+  position: relative;
+}
+
+.home-page .container {
+  margin-top: 10%;
+}
+
+.home-page .col-wrapper {
+  height: 100%;
+}
+
+.purple-invisible {
+  opacity: 0;
+}
+
+.nav.title-nav {
+  margin-top: 60%;
+}
+
+@media screen and (max-width: 1024px) {
+  h1 {
+    font-size: 40px;
+    left: 5%;
+    margin-top: 50%;
+  }
+  
+  .sliding {
+    position: absolute;
+    font-size: 12em;
+    max-width: 350px;
+  }
+
+  .col-wrapper .col {
+    flex-basis: 100%;
+  }
+
+  .nav.title-nav {
+    margin-top: -20%;
+  }
+
+  .home-text {
+    margin-top: 20%;
+  }
 }
