--- a/assets/css/new-style.css
+++ b/assets/css/new-style.css
@@ -422,6 +422,15 @@ body::-webkit-scrollbar {
   letter-spacing: 0px;
 }
 
+.industry .main-title-wrapper h3 {
+  font-family: Barlow-Medium;
+  font-size: 24px;
+  color: #363d42;
+  text-align: center;
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+
 .scenes-wrapper p.scenes-label {
   font-family: Muli-Regular;
   font-size: 18px;
