last of the text changes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2531,7 +2531,7 @@ body::-webkit-scrollbar {
 }
 
 .splash.purple .slide-energy h1::after {
-  content: "Energy";
+  content: "Oil and Gas";
 }
 
 .splash.purple .slide-power h1::after {
