--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2541,8 +2541,8 @@ body::-webkit-scrollbar {
 .slide.col-wrapper{
   top: -100%;
   z-index: 0;
-  padding-top: 50px;
   position: relative;
+  transform: translate(0px, 130px);
 }
 
 .slider.purple .nav.title-nav {
@@ -2560,7 +2560,7 @@ body::-webkit-scrollbar {
   transition: opacity 1s ease-in-out !important;
   opacity: 0;
   position: absolute;
-  height: 100%;
+  height: 115%;
   width: 100%;
 }
 
@@ -2589,5 +2589,26 @@ body::-webkit-scrollbar {
   .splash.purple h1::after {
     font-size: 51px;
     width: 284px;
+  }
+  .bg {
+    height: 100%;
+  }
+
+  .slide.col-wrapper {
+    transform: none;
+  }
+
+  .nav.title-nav {
+    padding: 92px 0 92px;
+  }
+  
+}
+
+@media screen and (max-width: 480px){
+  .col-wrapper {
+    flex-direction: row;
+  }
+  .slider.splash.purple h1::after {
+    font-size: 44px !important;
   }
 }
