--- a/assets/css/new-style.css
+++ b/assets/css/new-style.css
@@ -972,7 +972,7 @@ body {
   display: flex;
   flex-direction: column;
   right: -200%;
-  height: 100%;
+  height: 130%;
   box-shadow: -18px 4px 16px 0 rgba(0, 0, 0, 0.1);
   transition: right 1s ease-in-out
 }
@@ -1026,7 +1026,7 @@ body {
 .sidebar-wrapper .sidebar .white-section {
   background-color: rgba(255, 255, 255, 0.95);
   height: 100%;
-  padding: 60px 75px 0 35px
+  padding: 60px 35px 60px 35px
 }
 
 @media only screen and (max-width: 1024px) {
