--- a/assets/css/new-style.css
+++ b/assets/css/new-style.css
@@ -389,8 +389,8 @@ body {
 }
 
 .nav .nav-item {
-  flex: 0 0 140px;
-  margin-right: 20px
+  /* flex: 0 0 140px; */
+  margin-right: 45px;
 }
 
 @media only screen and (max-width: 480px) {
@@ -401,7 +401,7 @@ body {
 
 @media only screen and (min-width: 481px) and (max-width: 1024px) {
   .nav .nav-item {
-    flex: 0 0 150px
+    /* flex: 0 0 150px */
   }
 }
 
@@ -1214,7 +1214,7 @@ body {
   .level .scenes-wrapper .col {
     margin-left: 0px;
   }
-  
+
 }
 
 @media screen and (max-width: 477px){
@@ -1244,7 +1244,7 @@ body {
     left: 0% !important;
   }
 
-  
+
 }
 
 @media screen and (max-width: 600px){
