--- a/assets/css/new-style.css
+++ b/assets/css/new-style.css
@@ -1,122 +1,12 @@
-@font-face {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-style: normal;
-  font-weight: 400;
-  src: url(../fonts/Barlow-SemiBold.ttf) format("truetype");
-  font-display: swap;
-  font-family: Barlow-SemiBold
-}
-
-@font-face {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-style: normal;
-  font-weight: 400;
-  src: url(../fonts/Barlow-Medium.ttf) format("truetype");
-  font-display: swap;
-  font-family: Barlow-Medium
-}
-
-@font-face {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-style: normal;
-  font-weight: 400;
-  src: url(../fonts/Barlow-Regular.ttf) format("truetype");
-  font-display: swap;
-  font-family: Barlow-Regular
-}
-
-@font-face {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-style: normal;
-  src: url(../fonts/Barlow-Light.ttf) format("truetype");
-  font-display: swap;
-  font-family: Barlow-Light;
-  font-weight: 400
-}
-
-@font-face {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-style: normal;
-  font-weight: 400;
-  src: url(../fonts/Barlow-Bold.ttf) format("truetype");
-  font-display: swap;
-  font-family: Barlow-Bold
-}
-
-@font-face {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-style: normal;
-  font-weight: 400;
-  src: url(../fonts/Barlow-ExtraBold.ttf) format("truetype");
-  font-display: swap;
-  font-family: Barlow-ExtraBold
-}
-
-@font-face {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-style: normal;
-  font-weight: 400;
-  src: url(../fonts/Muli-Regular.ttf) format("truetype");
-  font-display: swap;
-  font-family: Muli-Regular
-}
-
-@font-face {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-style: normal;
-  font-weight: 400;
-  src: url(../fonts/Muli-Medium.ttf) format("truetype");
-  font-display: swap;
-  font-family: Muli-Medium
-}
-
-@font-face {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-style: normal;
-  font-weight: 400;
-  src: url(../fonts/Muli-SemiBold.ttf) format("truetype");
-  font-display: swap;
-  font-family: Muli-SemiBold
-}
-
-@font-face {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-style: normal;
-  font-weight: 400;
-  src: url(../fonts/Muli-Bold.ttf) format("truetype");
-  font-display: swap;
-  font-family: Muli-Bold
-}
-
-@font-face {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-style: normal;
-  font-weight: 400;
-  src: url(../fonts/Muli-ExtraBold.ttf) format("truetype");
-  font-display: swap;
-  font-family: Muli-ExtraBold
-}
-
-@font-face {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-style: normal;
-  font-weight: 400;
-  src: url(../fonts/Muli-Light.ttf) format("truetype");
-  font-display: swap;
-  font-family: Muli-Light
-}
+@font-face{font-family:'Barlow-Regular';src:url(../fonts/Barlow-Regular.eot);src:url(../fonts/Barlow-Regular.eot?#iefix) format("embedded-opentype"),url(../fonts/Barlow-Regular.woff2) format("woff2"),url(../fonts/Barlow-Regular.woff) format("woff"),url(../fonts/Barlow-Regular.ttf) format("truetype"),url(../fonts/Barlow-Regular.svg#Barlow-Regular) format("svg");font-weight:400;font-style:normal;font-display:swap;}
+@font-face{font-family:'Barlow-Bold';src:url(../fonts/Barlow-Bold.eot);src:url(../fonts/Barlow-Bold.eot?#iefix) format("embedded-opentype"),url(../fonts/Barlow-Bold.woff2) format("woff2"),url(../fonts/Barlow-Bold.woff) format("woff"),url(../fonts/Barlow-Bold.ttf) format("truetype"),url(../fonts/Barlow-Bold.svg#Barlow-Bold) format("svg");font-weight:700;font-style:normal;font-display:swap;}
+@font-face{font-family:'Barlow-Medium';src:url(../fonts/Barlow-Medium.eot);src:url(../fonts/Barlow-Medium.eot?#iefix) format("embedded-opentype"),url(../fonts/Barlow-Medium.woff2) format("woff2"),url(../fonts/Barlow-Medium.woff) format("woff"),url(../fonts/Barlow-Medium.ttf) format("truetype"),url(../fonts/Barlow-Medium.svg#Barlow-Medium) format("svg");font-weight:500;font-style:normal;font-display:swap;}
+@font-face{font-family:'Barlow-SemiBold';src:url(../fonts/Barlow-SemiBold.eot);src:url(../fonts/Barlow-SemiBold.eot?#iefix) format("embedded-opentype"),url(../fonts/Barlow-SemiBold.woff2) format("woff2"),url(../fonts/Barlow-SemiBold.woff) format("woff"),url(../fonts/Barlow-SemiBold.ttf) format("truetype"),url(../fonts/Barlow-SemiBold.svg#Barlow-SemiBold) format("svg");font-weight:600;font-style:normal;font-display:swap;}
+@font-face{font-family:'Barlow-Light';src:url(../fonts/Barlow-Light.eot);src:url(../fonts/Barlow-Light.eot?#iefix) format("embedded-opentype"),url(../fonts/Barlow-Light.woff2) format("woff2"),url(../fonts/Barlow-Light.woff) format("woff"),url(../fonts/Barlow-Light.ttf) format("truetype"),url(../fonts/Barlow-Light.svg#Barlow-Light) format("svg");font-weight:300;font-style:normal;font-display:swap;}
+@font-face{font-family:'Barlow-ExtraBold';src:url(../fonts/Barlow-ExtraBold.eot);src:url(../fonts/Barlow-ExtraBold.eot?#iefix) format("embedded-opentype"),url(../fonts/Barlow-ExtraBold.woff2) format("woff2"),url(../fonts/Barlow-ExtraBold.woff) format("woff"),url(../fonts/Barlow-ExtraBold.ttf) format("truetype"),url(../fonts/Barlow-ExtraBold.svg#Barlow-ExtraBold) format("svg");font-weight:700;font-style:normal;font-display:swap;}
+@font-face{font-family:'Muli-SemiBold';src:url(../fonts/Muli-SemiBold.eot);src:url(../fonts/Muli-SemiBold.eot?#iefix) format("embedded-opentype"),url(../fonts/Muli-SemiBold.woff2) format("woff2"),url(../fonts/Muli-SemiBold.woff) format("woff"),url(../fonts/Muli-SemiBold.ttf) format("truetype"),url(../fonts/Muli-SemiBold.svg#Muli-SemiBold) format("svg");font-weight:600;font-style:normal;font-display:swap;}
+@font-face{font-family:'Muli-Regular';src:url(../fonts/Muli-Regular.eot);src:url(../fonts/Muli-Regular.eot?#iefix) format("embedded-opentype"),url(../fonts/Muli-Regular.woff2) format("woff2"),url(../fonts/Muli-Regular.woff) format("woff"),url(../fonts/Muli-Regular.ttf) format("truetype"),url(../fonts/Muli-Regular.svg#Muli-Regular) format("svg");font-weight:400;font-style:normal;font-display:swap;}
+@font-face{font-family:'Muli-ExtraBold';src:url(../fonts/Muli-ExtraBold.eot);src:url(../fonts/Muli-ExtraBold.eot?#iefix) format("embedded-opentype"),url(../fonts/Muli-ExtraBold.woff2) format("woff2"),url(../fonts/Muli-ExtraBold.woff) format("woff"),url(../fonts/Muli-ExtraBold.ttf) format("truetype"),url(../fonts/Muli-ExtraBold.svg#Muli-ExtraBold) format("svg");font-weight:700;font-style:normal;font-display:swap;}
 
 .large {
   font-size: 16px;
@@ -171,7 +61,7 @@ body {
   text-rendering: optimizeSpeed;
   font-size: 14px;
   color: #000;
-  font-family: Barlow-Light;
+  font-family: Barlow-Light, Arial, Helvetica, sans-serif;
   background-color: #f2f5f7;
   -ms-overflow-style: none;
   scrollbar-width: none;
@@ -226,7 +116,7 @@ body {
 
 .button {
   text-decoration: none;
-  font-family: Barlow-SemiBold;
+  font-family: Barlow-SemiBold, Arial, Helvetica, sans-serif;
   font-size: 16px;
   line-height: normal;
   padding: 14px 25px 15px;
@@ -412,7 +302,7 @@ body {
 }
 
 .nav .nav-item .nav-link {
-  font-family: Barlow-SemiBold;
+  font-family: Barlow-SemiBold, Arial, Helvetica, sans-serif;
   font-size: 18px;
   line-height: 24px
 }
@@ -434,7 +324,7 @@ body {
 }
 
 .industry .main-title-wrapper h2 {
-  font-family: Barlow-Light;
+  font-family: Barlow-Light, Arial, Helvetica, sans-serif;
   font-weight: 300;
   font-size: 36px;
   color: #000;
@@ -450,14 +340,14 @@ body {
 }
 
 .industry .main-title-wrapper p {
-  font-family: Muli-Regular;
+  font-family: Muli-Regular, Arial, Helvetica, sans-serif;
   font-size: 14px;
   line-height: 20px;
   letter-spacing: 0px;
 }
 
 .industry .main-title-wrapper h3 {
-  font-family: Barlow-Medium;
+  font-family: Barlow-Medium, Arial, Helvetica, sans-serif;
   font-size: 24px;
   color: #363d42;
   text-align: center;
@@ -466,7 +356,7 @@ body {
 }
 
 .scenes-wrapper p.scenes-label {
-  font-family: Muli-Regular;
+  font-family: Muli-Regular, Arial, Helvetica, sans-serif;
   font-size: 18px;
   font-weight: bold;
   color: #363d42;
@@ -775,7 +665,7 @@ body {
 .pulse-dot .tooltip {
   background-color: rgba(255, 255, 255, 0.95);
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.1);
-  font-family: Barlow-Medium;
+  font-family: Barlow-Medium, Arial, Helvetica, sans-serif;
   font-size: 18px;
   color: #363d42;
   position: absolute;
@@ -902,7 +792,7 @@ body {
 }
 
 .scenes-wrapper .show-on-level.title-wrapper p {
-  font-family: Muli-Regular;
+  font-family: Muli-Regular, Arial, Helvetica, sans-serif;
   font-size: 14px;
   line-height: 20px;
   letter-spacing: 0px;
@@ -918,7 +808,7 @@ body {
 }
 
 .scenes-wrapper .show-on-level.title-wrapper h2 {
-  font-family: Barlow-Light;
+  font-family: Barlow-Light, Arial, Helvetica, sans-serif;
   font-weight: 300;
   font-size: 36px;
   color: #000;
@@ -984,7 +874,7 @@ body {
 }
 
 .sidebar-wrapper .sidebar .purple-gradient-section h4 {
-  font-family: Barlow-Regular;
+  font-family: Barlow-Regular, Arial, Helvetica, sans-serif;
   font-size: 24px;
   line-height: 32px;
   color: #fff;
@@ -992,7 +882,7 @@ body {
 }
 
 .sidebar-wrapper .sidebar .purple-gradient-section p {
-  font-family: Muli-Regular;
+  font-family: Muli-Regular, Arial, Helvetica, sans-serif;
   font-size: 14px;
   line-height: 20px;
   letter-spacing: 0px
@@ -1036,7 +926,7 @@ body {
 }
 
 .sidebar-wrapper .sidebar .white-section p {
-  font-family: Muli-Regular;
+  font-family: Muli-Regular, Arial, Helvetica, sans-serif;
   font-size: 14px;
   line-height: 20px;
   letter-spacing: 0px
