--- a/assets/css/la-style.css
+++ b/assets/css/la-style.css
@@ -23,6 +23,7 @@ body {font-family:Barlow-Light, Arial, Helvetica, sans-serif;}
 .fitb-pop>div {margin: auto 0; width: 100%; max-width: 750px; padding: 0!important; height: 422px; max-height: calc( ( 100vw - 80px ) * .5625 ); }
 
 .background-video {position: absolute; z-index: -1; bottom: 0; width: 100%; height: auto; }
+.nav .nav-item .nav-link:hover {color: #545C69; }
 
 @-webkit-keyframes pulse-before{
   0%{box-shadow:0 0 0 0 rgba(245,166,36,0.4)}
@@ -53,4 +54,7 @@ body {font-family:Barlow-Light, Arial, Helvetica, sans-serif;}
 }
 @media screen and (max-width: 800px) {
   .fitb-pop {-webkit-transform: translate(-50%, -50%);}
+}
+@media screen and (max-width: 573px) {
+  .home .splash-inner>.col-wrapper {padding-bottom: 170px; }
 }
