--- a/assets/css/new-style.css
+++ b/assets/css/new-style.css
@@ -119,13 +119,13 @@ body {
   font-family: Barlow-SemiBold, Arial, Helvetica, sans-serif;
   font-size: 16px;
   line-height: normal;
-  padding: 14px 25px 15px;
+  padding: 14px 10px 15px;
   color: #fff;
   background-color: #4d5ee0;
   display: inline-block;
   text-align: center;
   max-width: 167px;
-  width: 100%
+  width: 100%;
 }
 
 .industry .container {
