--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,123 +1,3 @@
-@font-face {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-style: normal;
-  font-weight: 400;
-  src: url(../fonts/Barlow-SemiBold.ttf) format("truetype");
-  font-display: swap;
-  font-family: Barlow-SemiBold
-}
-
-@font-face {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-style: normal;
-  font-weight: 400;
-  src: url(../fonts/Barlow-Medium.ttf) format("truetype");
-  font-display: swap;
-  font-family: Barlow-Medium
-}
-
-@font-face {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-style: normal;
-  font-weight: 400;
-  src: url(../fonts/Barlow-Regular.ttf) format("truetype");
-  font-display: swap;
-  font-family: Barlow-Regular
-}
-
-@font-face {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-style: normal;
-  src: url(../fonts/Barlow-Light.ttf) format("truetype");
-  font-display: swap;
-  font-family: Barlow-Light;
-  font-weight: 400
-}
-
-@font-face {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-style: normal;
-  font-weight: 400;
-  src: url(../fonts/Barlow-Bold.ttf) format("truetype");
-  font-display: swap;
-  font-family: Barlow-Bold
-}
-
-@font-face {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-style: normal;
-  font-weight: 400;
-  src: url(../fonts/Barlow-ExtraBold.ttf) format("truetype");
-  font-display: swap;
-  font-family: Barlow-ExtraBold
-}
-
-@font-face {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-style: normal;
-  font-weight: 400;
-  src: url(../fonts/Muli-Regular.ttf) format("truetype");
-  font-display: swap;
-  font-family: Muli-Regular
-}
-
-@font-face {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-style: normal;
-  font-weight: 400;
-  src: url(../fonts/Muli-Medium.ttf) format("truetype");
-  font-display: swap;
-  font-family: Muli-Medium
-}
-
-@font-face {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-style: normal;
-  font-weight: 400;
-  src: url(../fonts/Muli-SemiBold.ttf) format("truetype");
-  font-display: swap;
-  font-family: Muli-SemiBold
-}
-
-@font-face {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-style: normal;
-  font-weight: 400;
-  src: url(../fonts/Muli-Bold.ttf) format("truetype");
-  font-display: swap;
-  font-family: Muli-Bold
-}
-
-@font-face {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-style: normal;
-  font-weight: 400;
-  src: url(../fonts/Muli-ExtraBold.ttf) format("truetype");
-  font-display: swap;
-  font-family: Muli-ExtraBold
-}
-
-@font-face {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-style: normal;
-  font-weight: 400;
-  src: url(../fonts/Muli-Light.ttf) format("truetype");
-  font-display: swap;
-  font-family: Muli-Light
-}
-
 .large {
   font-size: 16px;
   line-height: 24px
@@ -176,7 +56,7 @@ body {
   text-rendering: optimizeSpeed;
   font-size: 14px;
   color: #000;
-  font-family: Barlow-Light;
+  font-family: Barlow-Light, Arial, Helvetica, sans-serif;
   background-color: #f2f5f7;
   -ms-overflow-style: none;
   scrollbar-width: none
@@ -225,7 +105,7 @@ body::-webkit-scrollbar {
 
 .button {
   text-decoration: none;
-  font-family: Barlow-SemiBold;
+  font-family: Barlow-SemiBold, Arial, Helvetica, sans-serif;
   font-size: 16px;
   line-height: normal;
   padding: 14px 25px 15px;
@@ -388,7 +268,7 @@ body::-webkit-scrollbar {
 }
 
 .nav .nav-item .nav-link {
-  font-family: Barlow-SemiBold;
+  font-family: Barlow-SemiBold, Arial, Helvetica, sans-serif;
   font-size: 18px;
   line-height: 24px
 }
@@ -413,7 +293,7 @@ body::-webkit-scrollbar {
 }
 
 .splash h1 {
-  font-family: Barlow-Bold;
+  font-family: Barlow-Bold, Arial, Helvetica, sans-serif;
   font-size: 80px;
   color: #6b05a8
 }
@@ -499,7 +379,7 @@ body::-webkit-scrollbar {
   top: 0;
   left: 0;
   z-index: 5;
-  font-family: Barlow-Bold;
+  font-family: Barlow-Bold, Arial, Helvetica, sans-serif;
   font-size: 80px;
   color: #6b05a8;
   -webkit-animation: swipe-splash 2.4s ease-in-out;
@@ -575,7 +455,7 @@ body::-webkit-scrollbar {
 }
 
 .splash .col-right p {
-  font-family: Muli-Regular;
+  font-family: Muli-Regular, Arial, Helvetica, sans-serif;
   font-size: 14px;
   line-height: 20px;
   letter-spacing: 0px
@@ -750,7 +630,7 @@ body::-webkit-scrollbar {
 }
 
 .slider .slide .col-left .text-wrapper h1 {
-  font-family: Barlow-Bold;
+  font-family: Barlow-Bold, Arial, Helvetica, sans-serif;
   font-size: 80px;
   color: #6b05a8
 }
@@ -796,7 +676,7 @@ body::-webkit-scrollbar {
 }
 
 .slider .slide .col-right p {
-  font-family: Muli-Regular;
+  font-family: Muli-Regular, Arial, Helvetica, sans-serif;
   font-size: 14px;
   line-height: 20px;
   letter-spacing: 0px
@@ -888,7 +768,7 @@ body::-webkit-scrollbar {
 }
 
 .industry .main-title-wrapper h2 {
-  font-family: Barlow-Light;
+  font-family: Barlow-Light, Arial, Helvetica, sans-serif;
   font-weight: 300;
   font-size: 36px;
   color: #000
@@ -914,7 +794,7 @@ body::-webkit-scrollbar {
 }
 
 .industry .main-title-wrapper h3 {
-  font-family: Barlow-Medium;
+  font-family: Barlow-Medium, Arial, Helvetica, sans-serif;
   font-size: 24px;
   color: #363d42;
   text-align: center;
@@ -923,7 +803,7 @@ body::-webkit-scrollbar {
 }
 
 .industry .main-title-wrapper p {
-  font-family: Muli-Regular;
+  font-family: Muli-Regular, Arial, Helvetica, sans-serif;
   font-size: 14px;
   line-height: 20px;
   letter-spacing: 0px
@@ -947,7 +827,7 @@ body::-webkit-scrollbar {
 }
 
 .scenes-wrapper p.scenes-label {
-  font-family: Muli-Regular;
+  font-family: Muli-Regular, Arial, Helvetica, sans-serif;
   font-size: 18px;
   font-weight: bold;
   color: #363d42
@@ -1029,7 +909,7 @@ body::-webkit-scrollbar {
 }
 
 .scenes-wrapper .show-on-level.title-wrapper h2 {
-  font-family: Barlow-Light;
+  font-family: Barlow-Light, Arial, Helvetica, sans-serif;
   font-weight: 300;
   font-size: 36px;
   color: #000
@@ -1055,7 +935,7 @@ body::-webkit-scrollbar {
 }
 
 .scenes-wrapper .show-on-level.title-wrapper p {
-  font-family: Muli-Regular;
+  font-family: Muli-Regular, Arial, Helvetica, sans-serif;
   font-size: 14px;
   line-height: 20px;
   letter-spacing: 0px
@@ -2290,7 +2170,7 @@ body::-webkit-scrollbar {
 .pulse-dot .tooltip {
   background-color: rgba(255, 255, 255, 0.95);
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.1);
-  font-family: Barlow-Medium;
+  font-family: Barlow-Medium, Arial, Helvetica, sans-serif;
   font-size: 20px;
   color: #363d42;
   position: absolute;
@@ -2412,7 +2292,7 @@ body::-webkit-scrollbar {
 }
 
 .sidebar-wrapper .sidebar .purple-gradient-section h4 {
-  font-family: Barlow-Regular;
+  font-family: Barlow-Regular, Arial, Helvetica, sans-serif;
   font-size: 24px;
   line-height: 32px;
   color: #fff;
@@ -2420,7 +2300,7 @@ body::-webkit-scrollbar {
 }
 
 .sidebar-wrapper .sidebar .purple-gradient-section p {
-  font-family: Muli-Regular;
+  font-family: Muli-Regular, Arial, Helvetica, sans-serif;
   font-size: 14px;
   line-height: 20px;
   letter-spacing: 0px
@@ -2464,7 +2344,7 @@ body::-webkit-scrollbar {
 }
 
 .sidebar-wrapper .sidebar .white-section p {
-  font-family: Muli-Regular;
+  font-family: Muli-Regular, Arial, Helvetica, sans-serif;
   font-size: 14px;
   line-height: 20px;
   letter-spacing: 0px
@@ -2606,7 +2486,7 @@ body::-webkit-scrollbar {
   .nav.title-nav {
     padding: 92px 0 92px;
   }
-  
+
 }
 
 @media screen and (max-width: 480px){
